@@ -45,10 +45,10 @@
               <tuple>
                 <string>cancel</string>
                 <string>cancel_action</string>
-                <string>confirm</string>
-                <string>confirm_action</string>
                 <string>delete</string>
                 <string>delete_action</string>
+                <string>order</string>
+                <string>order_action</string>
               </tuple>
             </value>
         </item>
@@ -78,7 +78,6 @@
                     <key> <string>Access contents information</string> </key>
                     <value>
                       <tuple>
-                        <string>Assignee</string>
                         <string>Assignor</string>
                         <string>Manager</string>
                         <string>Owner</string>
@@ -110,7 +109,6 @@
                     <key> <string>View</string> </key>
                     <value>
                       <tuple>
-                        <string>Assignee</string>
                         <string>Assignor</string>
                         <string>Manager</string>
                         <string>Owner</string>
