@@ -23,11 +23,11 @@
         </item>
         <item>
             <key> <string>description</string> </key>
-            <value> <string>Possibility should be given through special script code to cancel payment (and before that, allow modifications)</string> </value>
+            <value> <string></string> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>delivered</string> </value>
+            <value> <string>ordered</string> </value>
         </item>
         <item>
             <key> <string>permission_roles</string> </key>
@@ -37,14 +37,16 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Deposed</string> </value>
+            <value> <string>Sent To Validation</string> </value>
         </item>
         <item>
             <key> <string>transitions</string> </key>
             <value>
               <tuple>
-                <string>cancel</string>
-                <string>cancel_action</string>
+                <string>confirm</string>
+                <string>confirm_action</string>
+                <string>draft</string>
+                <string>draft_action</string>
               </tuple>
             </value>
         </item>
@@ -76,7 +78,6 @@
                       <tuple>
                         <string>Assignee</string>
                         <string>Assignor</string>
-                        <string>DestinationAssignee</string>
                         <string>Manager</string>
                         <string>Reviewer</string>
                       </tuple>
@@ -85,17 +86,13 @@
                 <item>
                     <key> <string>Add portal content</string> </key>
                     <value>
-                      <tuple>
-                        <string>Manager</string>
-                      </tuple>
+                      <tuple/>
                     </value>
                 </item>
                 <item>
                     <key> <string>Modify portal content</string> </key>
                     <value>
-                      <tuple>
-                        <string>Manager</string>
-                      </tuple>
+                      <tuple/>
                     </value>
                 </item>
                 <item>
@@ -104,7 +101,6 @@
                       <tuple>
                         <string>Assignee</string>
                         <string>Assignor</string>
-                        <string>DestinationAssignee</string>
                         <string>Manager</string>
                         <string>Reviewer</string>
                       </tuple>
