@@ -61,7 +61,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string></string> </value>
+            <value> <string>Reject Action</string> </value>
         </item>
         <item>
             <key> <string>trigger_type</string> </key>
@@ -83,7 +83,9 @@
             <key> <string>roles</string> </key>
             <value>
               <tuple>
-                <string>Assignee or Manager</string>
+                <string>Assignee</string>
+                <string>DestinationAssignee</string>
+                <string>Manager</string>
               </tuple>
             </value>
         </item>
