@@ -1,3 +1,6 @@
+2006-07-30 aurel
+* review mone deposit workflow
+
 2006-07-09 aurel
 * remove curreny sale as no more enougth generic
 
